JVM 7u181 crash with SIGSEGV when Tomcat 7 starts

XMLWordPrintable

    • master

      On some scenarios, the Java Virtual Machine 7u181 crashes when starting Tomcat 7. This bug has been reproduced with Serial Garbage Collector but may occur with other collectors and other applications as well.

      This bug is hard to reproduce because it depends on the Garbage Collector moving an object while an old reference to the object is used by ClassLoaderDependencies::record_dependency method. The object moved is pointed by "oop from_class_oop" pointer and is passed to ClassLoaderDependencies::record_dependency method from JVM_FindClassFromClass.

      Introduced when backporting JDK-8189123 to JDK7.

      Originally reported here: https://bugs.launchpad.net/ubuntu/+source/openjdk-7/+bug/1778930

            Assignee:
            Martin Balao Alonso
            Reporter:
            Martin Balao Alonso
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: